# X264EncoderFilter

./: CMakeLists.txt  DLLSetup.cpp  VersionInfo.h  X264EncoderFilter.cpp  X264EncoderFilter.def  X264EncoderFilter.h  X264EncoderFilter.rc  X264EncoderProperties.h  resource.h  stdafx.h
